   HBASE-5892  [hbck] Refactor parallel WorkItem* to Futures (Andrew Wang)
   HBASE-6067  HBase won't start when hbase.rootdir uses ViewFileSystem
   HBASE-6173  hbck check specified tables only
   HBASE-5360  [uberhbck] Add options for how to handle offline split parents. 
   HBASE-6283  [region_mover.rb] Add option to exclude list of hosts on unload instead of just assuming the source node

  NEW FEATURE
   HBASE-5128  [uber hbck] Online automated repair of table integrity and region consistency problems
   HBASE-5599  [hbck] handle NO_VERSION_FILE and SHOULD_NOT_BE_DEPLOYED inconsistencies (fulin wang)
   HBASE-5719  Enhance hbck to sideline overlapped mega regions (Jimmy Xiang)
   HBASE-5124  Backport LoadTestTool to 0.92 (Ted and Andrew)
   HBASE-6044  copytable: remove rs.* parameters

Release 0.92.1 - March 17th, 2012
  INCOMPATIBLE CHANGES
   HBASE-5228  [REST] Rip out "transform" feature
   HBASE-5255  Use singletons for OperationStatus to save memory (Benoit)
   HBASE-5358  HBaseObjectWritable should be able to serialize/deserialize generic
               arrays (Enis)
   HBASE-5371  Introduce AccessControllerProtocol.checkPermissions(Permission[] permissons)
               API (Enis)

  BUG FIXES
   HBASE-5176  AssignmentManager#getRegion: logging nit  adds a redundant '+' (Karthik K)
   HBASE-5278  HBase shell script refers to removed "migrate" functionality
               (Shaneal Manek)
   HBASE-5282  Possible file handle leak with truncated HLog file
   HBASE-5307  Unable to gracefully decommission a node because of script error
               (YiFeng Jiang)
   HBASE-5212  Fix test TestTableMapReduce against 0.23 (Ted and Gregory)
   HBASE-5267  Add a configuration to disable the slab cache by default (Li Pi)
   HBASE-5345  CheckAndPut doesn't work when value is empty byte[] (Evert Arckens)
   HBASE-5288  Security source code dirs missing from 0.92.0 release tarballs
   HBASE-5364  Fix source files missing licenses in 0.92 and trunk